--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazon-cognito-identity-js": "^2.0.3",
     "aws-sdk": "^2.236.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "json-loader": "^0.5.7",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "universal-cookie": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
